--- a/template.html
+++ b/template.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Personal</title>
     <link rel="stylesheet" href="https://github.com/Edsonjf/app-personal-flask/blob/main/static/bootstrap.css">
+    <script src="https://github.com/Edsonjf/app-personal-flask/blob/main/personal.py"></script>
   </head>
   <body>
     <div class="container">
