--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Personal</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename= 'bootstrap.css') }}">
+    <link rel="stylesheet" href="https://github.com/Edsonjf/app-personal-flask/blob/main/static/bootstrap.css">
+    <script src="https://github.com/Edsonjf/app-personal-flask/blob/main/personal.py"></script>
   </head>
   <body>
         <div class="container">
